tests/parser/bad/bad_match_arm.hel
// @name bad_match_arm
// @phase parser
// @expect error

match 1 { x => }
